feat(condo): DOMA-5916 added news table (#3269)
* feat(condo): DOMA-5915 added news table

* feat(condo): DOMA-5915 refactor and remove the link from the home page

* feat(condo): DOMA-5916 added correct display of all properties

* feat(condo): DOMA-5916 refactor and adding types

* feat(condo): DOMA-5916 refactor del unused component

* refactor(condo): DOMA-5916 del accident changes

* refactor(condo): DOMA-5916 del unnecessary changes

* feat(condo): DOMA-5916 added link to the newsItemCard

* feat(condo): DOMA-5916 removed unnecessary alerts and replaced constants

* feat(condo): DOMA-5916 changed logic for displaying not send postfixes

* feat(condo): DOMA-5916 simplified the locale calculation

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -181,6 +181,7 @@
   "global.section.onBoarding": "Where to begin?",
   "global.section.controlRoom": "Control Room",
   "global.section.incidents": "Incidents log",
+  "global.section.news": "News",
   "global.section.properties": "Buildings",
   "global.section.tickets": "Tickets",
   "global.section.employees": "Employees",
@@ -202,6 +203,7 @@
   "global.receiver": "Receiver",
   "global.paymentPurpose": "Payment purpose",
   "global.sum": "Sum",
+  "global.type": "Type",
   "global.select.deletedEmployee": "Deleted employee",
   "global.select.deletedOption": "Deleted",
   "global.filters.dateRange.start": "Start date",
@@ -972,6 +974,19 @@
   "pages.news.create.preview.app.notificationFromOrganization": "Notification from organization",
   "pages.news.create.preview.app.receivedAt": "Today, 9:00",
   "pages.news.create.preview.app.validUntil": "valid until {validBefore}",
+  "pages.condo.news.index.pageTitle": "News",
+  "pages.condo.news.index.tableField.body": "Message Text",
+  "pages.condo.news.index.tableField.addresses": "Addresses",
+  "pages.condo.news.index.tableField.date": "Sending date",
+  "pages.condo.news.index.field.notSentYet": "Not sent yet",
+  "pages.condo.news.index.emptyList.header": "No news yet",
+  "pages.condo.news.index.emptyList.title": "Shall we add the first news right now?",
+  "pages.condo.news.resend": "Resend",
+  "pages.condo.news.validBefore": "until {validBefore}",
+  "news.fields.properties.allSelected":"All houses",
+  "news.type.common": "Common",
+  "news.type.emergency": "Еmergency",
+  "news.createNews": "Add news",
   "property.import.column.Address": "Address",
   "property.import.column.Units": "Units",
   "property.import.column.Sections": "Sections",
