--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -181,6 +181,7 @@
   "global.section.onBoarding": "С чего начать?",
   "global.section.controlRoom": "Диспетчерская",
   "global.section.incidents": "Журнал отключений",
+  "global.section.news": "Новости",
   "global.section.properties": "Дома",
   "global.section.tickets": "Заявки",
   "global.section.employees": "Сотрудники",
@@ -202,6 +203,7 @@
   "global.receiver": "Получатель",
   "global.paymentPurpose": "Назначение платежа",
   "global.sum": "Сумма",
+  "global.type": "Тип",
   "global.select.deletedEmployee": "Удаленный сотрудник",
   "global.select.deletedOption": "Удалено",
   "global.filters.dateRange.start": "Начальная дата",
@@ -972,6 +974,19 @@
   "pages.news.create.preview.app.notificationFromOrganization": "Уведомление от УК",
   "pages.news.create.preview.app.receivedAt": "Сегодня, 9:00",
   "pages.news.create.preview.app.validUntil": "актуально до {validBefore}",
+  "pages.condo.news.index.pageTitle": "Новости",
+  "pages.condo.news.index.tableField.body": "Текст сообщения",
+  "pages.condo.news.index.tableField.addresses": "Адресаты",
+  "pages.condo.news.index.tableField.date": "Дата отправления",
+  "pages.condo.news.index.field.notSentYet": "Ещё не отправлено",
+  "pages.condo.news.index.emptyList.header": "Пока новостей нет",
+  "pages.condo.news.index.emptyList.title": "Добавим первую новость прямо сейчас?",
+  "pages.condo.news.resend": "Повторить отправку",
+  "pages.condo.news.validBefore": "до {validBefore}",
+  "news.fields.properties.allSelected":"Все дома",
+  "news.type.common": "Плановый",
+  "news.type.emergency": "Аварийный",
+  "news.createNews": "Добавить новость",
   "property.import.column.Address": "Адрес",
   "property.import.column.Units": "Помещений",
   "property.import.column.Sections": "Подъездов",
