fix(condo): DOMA-3289 added spaces trimming for "number" and "account Number"…  (#3365)
* fix(condo): DOMA-3289 added spaces trimming for "number" and "accountNumber" fields in meter modal form

* fix(condo): DOMA-3289 fixed meter import

* fix(condo): DOMA-3289 fixed translates

* fix(condo): DOMA-3289 added validation and spaces trimming for "number" and "accountNumber" fields for schema Meter

* fix(condo): DOMA-3289 fixed tests

* refactor(condo): DOMA-3289 refactored after review

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1079,6 +1079,8 @@
   "meter.import.error.WrongDateFormatMessage": "Incorrect date format in column \"{columnName}\". Use either value of String type in format: \"{format}\", or value of Date type",
   "meter.import.error.WrongDateOrMonthFormatMessage": "Wrong date format in column \"{columnName}\". Use either value of String formats \"{format1}\", \"{format2}\" (for month-only); or value of Date type",
   "meter.import.error.ZeroValuesSpecified": "At least one of values must be specified",
+  "meter.import.error.AccountNumberInvalidValue": "Account number field is filled incorrectly",
+  "meter.import.error.MeterNumberInvalidValue": "Meter number field is filled incorrectly",
   "meter.import.value.meterResourceType.hotWater": "HW",
   "meter.import.value.meterResourceType.coldWater": "CW",
   "meter.import.value.meterResourceType.electricity": "EL",
@@ -1595,6 +1597,8 @@
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "No properties are found to export for current organization",
   "api.property.create.sameAddressError": "Property with the same address already exists in selected organization",
   "api.meter.exportMeterReadings.NOTHING_TO_EXPORT": "No meter readings to export for specified organization",
+  "api.meter.METER_NUMBER_HAVE_INVALID_VALUE": "Meter number field value cannot be empty",
+  "api.meter.METER_ACCOUNT_NUMBER_HAVE_INVALID_VALUE": "Account number field value cannot be empty",
   "api.contact.exportContactsToExcel.NOTHING_TO_EXPORT": "No contacts found for export",
   "api.propertyScope.MAX_NAME_LENGTH_ERROR": "Exceeded the maximum number of characters in the title ({max} characters)",
   "api.propertyScope.exportPropertyScopesToExcel.NOTHING_TO_EXPORT": "No property scopes found for export",
