--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1079,6 +1079,8 @@
   "meter.import.error.WrongDateFormatMessage": "Неверное значение даты в столбце \"{columnName}\". Используйте значение с типом Строка в формате \"{format}\", либо значение с типом Дата",
   "meter.import.error.WrongDateOrMonthFormatMessage": "Неверное значение даты в столбце \"{columnName}\". Используйте значение с типом Строка в форматах \"{format1}\", \"{format2}\" (для указания только месяца); либо значение с типом Дата",
   "meter.import.error.ZeroValuesSpecified": "Должно быть указано как минимум одно из показаний",
+  "meter.import.error.AccountNumberInvalidValue": "Указан некорректный лицевой счет",
+  "meter.import.error.MeterNumberInvalidValue": "Указан некорректный номер счетчика",
   "meter.import.value.meterResourceType.hotWater": "ГВС",
   "meter.import.value.meterResourceType.coldWater": "ХВС",
   "meter.import.value.meterResourceType.electricity": "ЭЛ",
@@ -1113,7 +1115,7 @@
   "ImportError": "Во время обработки документа произошла ошибка, проверьте корректность предоставленных данных или обратитесь в службу поддержки",
   "ImportSuccess": "{objects} добавлены.",
   "ImportProcessing": "Данные обрабатываются, не закрывайте вкладку браузера и не выключайте компьютер",
-  "ImportRequiredColumnsFormat": "Сформируйте и загрузите файл со списоком {domain}.",
+  "ImportRequiredColumnsFormat": "Сформируйте и загрузите файл со списком {domain}.",
   "ReadMore": "Раскрыть",
   "Redirecting": "Перенаправляем ...",
   "Register": "Зарегистрироваться",
@@ -1543,7 +1545,7 @@
   "errors.import.PropertyDuplicate": "В вашей организации уже есть дом с данным адресом",
   "errors.import.IncorrectContactName": "Некорректное имя контакта",
   "errors.import.EmptyUnitName": "Номер помещения не должен быть пустым",
-  "errors.import.EmptyUnitType": "Поле Unit Type заполнено некорректно",
+  "errors.import.EmptyUnitType": "Тип помещения заполнен некорректно",
   "errors.import.IncorrectEmailFormat": "Неверный формат эл. почты",
   "errors.import.IncorrectPhonesFormat": "Ни один из телефонов не соответсвует правильному формату",
   "errors.import.IncorrectPhoneNumberFormat": "Телефон не соответсвует правильному формату",
@@ -1595,6 +1597,8 @@
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "Нет домов для экспорта, которые связаны с данной организацией",
   "api.property.create.sameAddressError": "Дом с таким адресом уже создан в выбранной организации",
   "api.meter.exportMeterReadings.NOTHING_TO_EXPORT": "Нет показаний ИПУ для экспорта, которые связаны с указанной организацией",
+  "api.meter.METER_NUMBER_HAVE_INVALID_VALUE": "Номер счетчика не может быть пустым",
+  "api.meter.METER_ACCOUNT_NUMBER_HAVE_INVALID_VALUE": "Лицевой счет не может быть пустым",
   "api.contact.exportContactsToExcel.NOTHING_TO_EXPORT": "Не найдено контактов для экспорта",
   "api.propertyScope.MAX_NAME_LENGTH_ERROR": "Превышено максимальное количество символов в названии ({max} символов)",
   "api.propertyScope.exportPropertyScopesToExcel.NOTHING_TO_EXPORT": "Не найдено областей видимости для экспорта",
