--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1070,6 +1070,7 @@
   "meter.import.column.CommissioningDate": "Commissioning date",
   "meter.import.column.SealingDate": "Sealing date",
   "meter.import.column.ControlReadingsDate": "Control readings date",
+  "meter.import.column.MeterPlace": "Meter place",
   "meter.import.error.MeterAccountNumberExistInOtherUnit": "Meter with such account number exists in another unit",
   "meter.import.error.MeterNumberExistInOrganization": "Meter with this number already exists in your organization",
   "meter.import.error.MeterResourceNotFound": "Meter type was not found according to specified abbreviation in \"Type\" column",
