--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1070,6 +1070,7 @@
   "meter.import.column.CommissioningDate": "Дата ввода в эксплуатацию",
   "meter.import.column.SealingDate": "Дата опломбирования",
   "meter.import.column.ControlReadingsDate": "Дата контрольных показаний",
+  "meter.import.column.MeterPlace": "Место установки счетчика",
   "meter.import.error.MeterAccountNumberExistInOtherUnit": "Прибор учета с таким лицевым счетом уже существует в другой квартире",
   "meter.import.error.MeterNumberExistInOrganization": "Прибор учета с таким номером уже существует в вашей организации",
   "meter.import.error.MeterResourceNotFound": "Не найден тип счётчика по указанной аббревиатуре",
