feat(condo): DOMA-6156 Export news recipients to xlsx service (#3391)
* refactor(condo): DOMA-5919 changed usage of `findOne` to domain-specific serverUtils

* feat(condo): DOMA-5919 Branch was rebased, fix objects after queries were moved to context

* feat(condo): DOMA-6156 temp commit 1

* feat(condo): DOMA-6156 temp commit 2

* feat(condo): DOMA-6156 temp commit 3

* fix(condo): DOMA-6156 fix access

* test(condo): DOMA-6156 add tests

* refactor(condo): DOMA-6156 use loadListByChunks

* feat(condo): DOMA-6156 temp commit 4

* feat(condo): DOMA-6156 temp commit 5

* feat(condo): DOMA-6156 use antd button

* chore(condo): DOMA-6156 remove redundant const

* fix(condo): DOMA-6156 fixes after review

* test(condo): DOMA-6156 fix test user cannot execute if no canManageNewsItems

* fix(condo): DOMA-6156 rm ts-ignore and use default limit for loadListByChunks

* chore(condo): DOMA-6156 use _.compact

* chore(condo): DOMA-6156 use filter instead reduce

* refactor(condo): DOMA-6156 simplify service logic

---------

Co-authored-by: Anton Aleshin <Anton_Aleschin@mail.ru>
Co-authored-by: AleX83Xpert <AleX83Xpert@mail.ru>

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1659,6 +1659,10 @@
   "api.miniapp.sendB2CAppPushMessage.APP_IN_BLACK_LIST": "Could not send notifications for the blacklisted app",
   "excelExport.header.contacts.forAllTime": "Contacts for all time",
   "excelExport.header.contacts.forPeriod": "Contacts for the period",
+  "excelExport.header.newsRecipients": "News recipients",
+  "excelExport.headers.newsRecipients.address": "Address",
+  "excelExport.headers.newsRecipients.unitName": "Unit name",
+  "excelExport.headers.newsRecipients.hasResident": "Resident mobile app installed",
   "excelExport.headers.payments.date": "Date",
   "excelExport.headers.payments.account": "Account",
   "excelExport.headers.payments.address": "Address",
@@ -1810,6 +1814,7 @@
   "excelExport.sheetNames.propertyScopes": "Property scopes",
   "excelExport.sheetNames.incidents": "Incidents",
   "excelExport.sheetNames.contacts": "Contacts",
+  "excelExport.sheetNames.newsRecipients": "News recipients",
   "ticketBlankExport.address.unitType.flat": "flat",
   "ticketBlankExport.address.unitType.parking": "parking place",
   "ticketBlankExport.address.unitType.apartment": "apartment",
