--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1659,6 +1659,10 @@
   "api.miniapp.sendB2CAppPushMessage.APP_IN_BLACK_LIST": "Невозможно отправить уведомления для приложения, находящегося в блэклисте",
   "excelExport.header.contacts.forAllTime": "Контакты за всё время",
   "excelExport.header.contacts.forPeriod": "Контакты за период",
+  "excelExport.header.newsRecipients": "Получатели новости",
+  "excelExport.headers.newsRecipients.address": "Адрес",
+  "excelExport.headers.newsRecipients.unitName": "Квартира",
+  "excelExport.headers.newsRecipients.hasResident": "Установлено мобильное приложение жителя",
   "excelExport.headers.payments.date": "Дата",
   "excelExport.headers.payments.account": "ЛС",
   "excelExport.headers.payments.address": "Адрес",
@@ -1810,6 +1814,7 @@
   "excelExport.sheetNames.propertyScopes": "Области видимости",
   "excelExport.sheetNames.incidents": "Отключения",
   "excelExport.sheetNames.contacts": "Контакты",
+  "excelExport.sheetNames.newsRecipients": "Получатели новости",
   "ticketBlankExport.address.unitType.flat": "квартира",
   "ticketBlankExport.address.unitType.parking": "машиноместо",
   "ticketBlankExport.address.unitType.apartment": "апартаменты",
