fix(condo): DOMA-6211 fixed translations (#3416)
* fix(condo): DOMA-5053 fixed translations

* fix(condo): DOMA-6211 fixed translations

* fix(condo): DOMA-4379 fixed translations

* fix(condo): DOMA-5250 fixed translations

* fix(condo): DOMA-2740 fixed translations

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -390,7 +390,7 @@
   "pages.auth.signin.ResetPasswordLink": "Забыли пароль? {link}",
   "pages.auth.signin.ResetPasswordLinkTitle": "Сбросить",
   "pages.auth.SignInTitle": "Вход",
-  "pages.auth.TwoPasswordDontMatch": "Введеные вами пароли не совпадают",
+  "pages.auth.TwoPasswordDontMatch": "Введенные вами пароли не совпадают",
   "pages.auth.WeMustMakeSureThatYouAreHuman": "Нам нужно убедиться, что вы человек",
   "pages.auth.WhatDoYouWantOthersToCallYou": "Как вас будут называть другие?",
   "pages.auth.WrongPhoneOrPassword": "Неверный номер телефона или пароль",
@@ -425,7 +425,7 @@
   "pages.condo.property.EmptyBuildingBlock.view.auto.EmptyBuildingDescription": "Построить шахматку дома можно вручную, указав несколько параметров, или автоматически, на основе данных {services}",
   "pages.condo.property.EmptyBuildingBlock.view.auto.EmptyBuildingDescription.services": "ГИС ЖКХ и Росреестра",
   "pages.condo.property.EmptyBuildingBlock.view.manual.EmptyBuildingDescription": "Укажите несколько параметров, чтобы автоматически сгенерировать шахматку дома",
-  "pages.condo.property.EmptyBuildingBlock.edit.EmptyBuildingDescription": "Она в верхнем правом углу\nДальше - все интуитивно-понятно \uD83D\uDE0A",
+  "pages.condo.property.EmptyBuildingBlock.edit.EmptyBuildingDescription": "Она в верхнем правом углу.\nДальше - все интуитивно-понятно \uD83D\uDE0A",
   "pages.condo.property.EmptyBuildingBlock.view.CreateMapManuallyTitle": "Создать вручную",
   "pages.condo.property.EmptyBuildingBlock.view.CreateMapAutomaticallyTitle": "Сгенерировать автоматически",
   "pages.condo.property.EmptyBuildingBlock.edit.EmptyBuildingHeader": "Нажмите кнопку «Добавить элемент»",
@@ -532,6 +532,7 @@
   "pages.condo.property.warning.modal.HelpMessage": "Информация о доме не сохранится, если вы уйдёте со страницы. Сохраните изменения или продолжите редактировать информацию о доме, закрыв это сообщение.",
   "pages.condo.property.warning.modal.AddressValidationErrorMsg": "Это не похоже на адрес дома. Проверьте, всё ли вы правильно указали.",
   "pages.condo.property.warning.modal.SameUnitNamesErrorMsg": "Названия помещений должны быть уникальными",
+  "pages.condo.property.warning.modal.SameParkingPlaceNamesErrorMsg": "Названия машиномест должны быть уникальными",
   "pages.condo.property.warning.modal.unsavedChanges": "У вас есть несохраненные изменения",
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Дом с таким адресом уже был добавлен в организацию",
   "pages.condo.property.warning.modal.Title": "Не сохранять дом?",
@@ -1547,8 +1548,8 @@
   "errors.import.EmptyUnitName": "Номер помещения не должен быть пустым",
   "errors.import.EmptyUnitType": "Тип помещения заполнен некорректно",
   "errors.import.IncorrectEmailFormat": "Неверный формат эл. почты",
-  "errors.import.IncorrectPhonesFormat": "Ни один из телефонов не соответсвует правильному формату",
-  "errors.import.IncorrectPhoneNumberFormat": "Телефон не соответсвует правильному формату",
+  "errors.import.IncorrectPhonesFormat": "Ни один из телефонов не соответствует правильному формату",
+  "errors.import.IncorrectPhoneNumberFormat": "Телефон не соответствует правильному формату",
   "errors.import.InvalidColumnTypes": "Обязательные колонки не были заполнены, или типы данных не соответствуют указанным",
   "errors.import.AlreadyCreatedContact": "Такой контакт уже существует в этой квартире",
   "errors.import.IncorrectContactRole": "Неверная роль. Используйте роли из списка: {rolesList}",
@@ -1609,7 +1610,7 @@
   "api.user.checkPasswordRecoveryToken.TOKEN_NOT_FOUND": "Токен на смену пароля не найден либо просрочен. Попробуйте пройти процедуру смены пароля заново.",
   "api.user.startPasswordRecovery.USER_NOT_FOUND": "Не найден пользователь, для которого требуется восстановить доступ",
   "api.user.startPasswordRecovery.MULTIPLE_USERS_FOUND": "Что-то пошло не так. Обратитесь в техническую поддержку",
-  "api.user.changePasswordWithToken.USER_NOT_FOUND": "Что-то пошло не так. Попробуйте пройти процедуру восстаноления доступа заново",
+  "api.user.changePasswordWithToken.USER_NOT_FOUND": "Что-то пошло не так. Попробуйте пройти процедуру восстановления доступа заново",
   "api.user.signinAsUser.USER_NOT_FOUND": "Пользователь не найден",
   "api.user.signinAsUser.DENIED_FOR_ADMIN": "Вы не можете авторизоваться за другого администратора",
   "api.user.signinAsUser.DENIED_FOR_SUPPORT": "Вы не можете авторизоваться за другого пользователя тех-поддержки",
