--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -425,7 +425,7 @@
   "pages.condo.property.EmptyBuildingBlock.view.auto.EmptyBuildingDescription": "You can build a map in two ways: manually, by filling in several parameters about the house, or by generating a map automatically, based on data from {services}",
   "pages.condo.property.EmptyBuildingBlock.view.auto.EmptyBuildingDescription.services": "external services",
   "pages.condo.property.EmptyBuildingBlock.view.manual.EmptyBuildingDescription": "Specify a few parameters to automatically generate a house map",
-  "pages.condo.property.EmptyBuildingBlock.edit.EmptyBuildingDescription": "This is at upper right corner of the screen\nThen everything is intuitive \uD83D\uDE0A",
+  "pages.condo.property.EmptyBuildingBlock.edit.EmptyBuildingDescription": "This is at upper right corner of the screen.\nThen everything is intuitive \uD83D\uDE0A",
   "pages.condo.property.EmptyBuildingBlock.view.CreateMapManuallyTitle": "Create manually",
   "pages.condo.property.EmptyBuildingBlock.view.CreateMapAutomaticallyTitle": "Generate map",
   "pages.condo.property.EmptyBuildingBlock.edit.EmptyBuildingHeader": "Press on «Add element» button",
@@ -532,6 +532,7 @@
   "pages.condo.property.warning.modal.HelpMessage": "Unsaved information about this property will be lost if you leave this page. You can save the information or continue to edit  by closing this modal window.",
   "pages.condo.property.warning.modal.AddressValidationErrorMsg": "It doesn't look like a house address. Check if you have specified everything correctly.",
   "pages.condo.property.warning.modal.SameUnitNamesErrorMsg": "Unit names must be unique",
+  "pages.condo.property.warning.modal.SameParkingPlaceNamesErrorMsg": "Parking place names must be unique",
   "pages.condo.property.warning.modal.unsavedChanges": "You have unsaved changes",
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Property with this address has already been added to the organization",
   "pages.condo.property.warning.modal.Title": "Do not save property?",
