feat(condo): DOMA-5917 added create update news form page (#3397)
* feat(condo): DOMA-5917 added create update news form page

* feat(condo): DOMA-5917 refactor and added types

* feat(condo): DOMA-5917 added few types and rename [id]/create page to [id]/resend

* fix(condo): DOMA-5917 refactored

* fix(condo): DOMA-5917 move regex to consts

* fix(condo): DOMA-5917 del debugs

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -176,6 +176,8 @@
   "Now": "Now",
   "MobileAppResident": "Resident app",
   "PushNotification": "Push-notification",
+  "global.checkAll": "Check all",
+  "global.actualUntil": "Actual until",
   "global.section.accrualsAndPayments": "Accruals and payments",
   "global.section.analytics": "Analytics",
   "global.section.onBoarding": "Where to begin?",
@@ -204,13 +206,18 @@
   "global.paymentPurpose": "Payment purpose",
   "global.sum": "Sum",
   "global.type": "Type",
+  "global.now": "Now",
+  "global.later": "Later",
   "global.select.deletedEmployee": "Deleted employee",
   "global.select.deletedOption": "Deleted",
+  "global.select.address": "Select address",
+  "global.share": "Share",
   "global.filters.dateRange.start": "Start date",
   "global.filters.dateRange.end": "Final date",
   "global.input.error.wrongEmails": "Wrong format of E-mail addresses",
   "global.input.error.wrongPhone": "Wrong phone format, we expect +1 (XXX) XXX XX XX",
   "global.input.error.wrongMobilePhone": "Wrong phone format or it's not a mobile number, we expect +1 (XXX) XXX XX XX",
+  "global.input.error.pastTime": "Choose time that has not yet arrived",
   "global.globalHints.canDisableHints": "You can disable these hints in",
   "global.globalHints.canDisableHints.inProfile": "profile",
   "global.globalHints.banner.more": "More",
@@ -982,10 +989,36 @@
   "pages.condo.news.index.emptyList.title": "Shall we add the first news right now?",
   "pages.condo.news.resend": "Resend",
   "pages.condo.news.validBefore": "until {validBefore}",
+  "pages.condo.news.notification.success.title" : "News sent",
+  "pages.condo.news.notification.success.description" : "Sending can be cancelled within 15 seconds",
+  "pages.condo.news.notification.success.button" : "Cancel send",
+  "news.fields.units.label": "Flat",
+  "news.fields.units.message": "To select flats, delete the selected entrances",
+  "news.fields.sections.label": "Entrance",
+  "news.fields.sections.message": "To select entrances, delete the selected flats",
+  "news.fields.type.label": "News type",
+  "news.fields.title.label": "Title",
+  "news.fields.title.placeholder": "Form title of news. Don't start with a greeting, but get right to the point: tell what happened in a short sentence",
+  "news.fields.body.label": "Message text",
+  "news.fields.body.placeholder": "Form message text of the news - it will appear on the main screen of the resident's app, in the «News» section and as a push notification",
   "news.fields.properties.allSelected":"All houses",
+  "news.fields.validBefore.title":"The message will be pinned to the home screen of the app until the specified time or until the resident reads it. After that, it stays in the newsfeed and notification section",
+  "news.fields.sendAt.label": "Send at",
+  "news.fields.title.error.length": "Please add title",
+  "news.fields.body.error.length": "Please add message",
+  "news.fields.makeText.label": "Make up a text",
+  "news.fields.text.label": "News text",
+  "news.fields.address.label": "Select addressees",
+  "news.fields.period.label": "Select the sending time",
+  "news.fields.templateBody.error": "Fill blanks in the template before sending",
+  "news.fields.emptyTemplate.title": "Without template",
+  "news.fields.validBefore.error": "Time for sending news does not match the validBefore. Change the validBefore to send the news.",
+  "news.fields.toManyMessages.error": "We recommend sending no more than five news per day so as not to bore residents. It is better to postpone sending it until tomorrow.",
   "news.type.common": "Common",
   "news.type.emergency": "Еmergency",
   "news.createNews": "Add news",
+  "news.create.title": "New news",
+  "news.update.title": "Edit news",
   "property.import.column.Address": "Address",
   "property.import.column.Units": "Units",
   "property.import.column.Sections": "Sections",
