--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -176,6 +176,8 @@
   "Now": "Сейчас",
   "MobileAppResident": "Приложение жителя",
   "PushNotification": "Push-уведомления",
+  "global.checkAll": "Выбрать все",
+  "global.actualUntil": "Актуально до",
   "global.section.accrualsAndPayments": "Начисления и оплаты",
   "global.section.analytics": "Аналитика",
   "global.section.onBoarding": "С чего начать?",
@@ -204,13 +206,18 @@
   "global.paymentPurpose": "Назначение платежа",
   "global.sum": "Сумма",
   "global.type": "Тип",
+  "global.now": "Сейчас",
+  "global.later": "Позже",
   "global.select.deletedEmployee": "Удаленный сотрудник",
   "global.select.deletedOption": "Удалено",
+  "global.select.address": "Выбрать адреса",
+  "global.share": "Отправить",
   "global.filters.dateRange.start": "Начальная дата",
   "global.filters.dateRange.end": "Конечная дата",
   "global.input.error.wrongEmails": "Неверный формат E-mail адресов",
   "global.input.error.wrongPhone": "Не соответствует формату +7 (XXX) XXX-XX-XX",
   "global.input.error.wrongMobilePhone": "Не соответствует формату +7 (XXX) XXX-XX-XX или это не мобильный телефон",
+  "global.input.error.pastTime": "Выберите время, которое ещё не наступило",
   "global.globalHints.canDisableHints": "Отключить эти подсказки можно в",
   "global.globalHints.canDisableHints.inProfile": "профиле",
   "global.globalHints.banner.more": "Как это работает",
@@ -982,10 +989,36 @@
   "pages.condo.news.index.emptyList.title": "Добавим первую новость прямо сейчас?",
   "pages.condo.news.resend": "Повторить отправку",
   "pages.condo.news.validBefore": "до {validBefore}",
-  "news.fields.properties.allSelected":"Все дома",
+  "pages.condo.news.notification.success.title" : "Новость отправлена",
+  "pages.condo.news.notification.success.description" : "Отправку можно отменить в течение 15 секунд",
+  "pages.condo.news.notification.success.button" : "Отменить отправку",
+  "news.fields.units.label": "Помещение",
+  "news.fields.units.message": "Чтобы выбрать помещения, удалите выбранные подъезды",
+  "news.fields.sections.label": "Подъезд",
+  "news.fields.sections.message": "Чтобы выбрать подъезды, удалите выбранные помещения",
+  "news.fields.type.label": "Тип уведомления",
+  "news.fields.title.label": "Заголовок",
+  "news.fields.title.placeholder": "Сформулируйте заголовок новости. Не начинайте с приветствия, а сразу переходите к сути: расскажите, что произошло, короткой фразой",
+  "news.fields.body.label": "Основной текст",
+  "news.fields.body.placeholder": "Сформулируйте текст новости — он появится на главном экране приложения жителя, в разделе «Новости» и в качестве push-уведомления",
+  "news.fields.properties.allSelected": "Все дома",
+  "news.fields.validBefore.title": "Сообщение будет закреплено на главном экране приложения до указанного срока или пока житель его не прочитает. После — останется в ленте новостей и разделе уведомлений",
+  "news.fields.sendAt.label": "Отправить в",
+  "news.fields.title.error.length": "Пожалуйста, добавьте заголовок",
+  "news.fields.body.error.length": "Пожалуйста, добавьте основной текст",
+  "news.fields.makeText.label": "Составьте текст",
+  "news.fields.text.label": "Текст новости",
+  "news.fields.address.label": "Выберите адресатов",
+  "news.fields.period.label": "Выберите время отправки",
+  "news.fields.templateBody.error": "Заполните пропуски в шаблоне перед отправкой",
+  "news.fields.emptyTemplate.title": "Без шаблона",
+  "news.fields.validBefore.error": "Время отправки новости не совпадает со сроком ее актуальности. Измените срок, чтобы отправить новость.",
+  "news.fields.toManyMessages.error": "Мы рекомендуем отправлять не более 5 новостей в день, чтобы не докучать жителям. Лучше отложить отправку на завтра.",
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
   "news.createNews": "Добавить новость",
+  "news.create.title": "Новая новость",
+  "news.update.title": "Редактировать новость",
   "property.import.column.Address": "Адрес",
   "property.import.column.Units": "Помещений",
   "property.import.column.Sections": "Подъездов",
@@ -1162,7 +1195,7 @@
   "news.component.RecipientCounter.toResidentsInAllProperties": " по всем адресам",
   "news.component.RecipientCounter.toResidentsInProperty": " по адресу: {address}",
   "news.component.RecipientCounter.toResidentsInProperties": " по адресам: {addressList}{andMore}",
-  "news.component.RecipientCounter.toResidentsInProperties.andMore": " и ещё {count, plural, one {# адрес} few {# адреса} many {# адресов}}",
+  "news.component.RecipientCounter.toResidentsInProperties.andMore": " и ещё {count, plural, one {# адрес} few {# адреса} other {# адресов}}",
   "news.component.RecipientCounter.toResidentsInPropertySection": " по подъезду {section} по адресу {address}",
   "news.component.RecipientCounter.toResidentsInPropertySections": " по подъездам {sections} по адресу {address}",
   "news.component.RecipientCounter.toResidentsInPropertyUnits": " по квартирам {unitNames} по адресу {address}",
