feat(condo): DOMA-5776 added ticket feedback by resident (deprecated review) (#3152)
* feat(condo): DOMA-5776 fixed ticket filter template

feat(condo): DOMA-5776 regenerated migrations

fix(condo): DOMA-5776 fixed Ticket accesses for service user

fix(condo): DOMA-5776 fixed template and ticket export test

test(condo): DOMA-5776 fixed test

refactor(condo): DOMA-5776 deleted console logs

fix(condo): DOMA-5776 updated callcenter submodule

fix(condo): DOMA-5776 updated todos

fix(condo): DOMA-5776 fixed ticket filter templates

fix(condo): DOMA-5776 updated schemas

fix(condo): DOMA-5776 updated migrations

fix(condo): DOMA-5776 added backward compatibility for ticket filter templates. This will be removed in one of the next updates

fix(condo): DOMA-5776 fixed translates

fix(condo): DOMA-5776 fixed translates

fix(condo): DOMA-5776 fixed tests

refactor(condo): DOMA-5776 refactored after review

chore(condo): DOMA-5776 updated migrations after rebase

chore(condo): DOMA-5776 updated submodule after rebase

chore(condo): DOMA-5776 updated ticket export template

chore(condo): DOMA-5776 updated docs for Ticket

test(condo): DOMA-5576 fixed ticket tests

feat(condo): DOMA-5776 added ticket feedback by resident (deprecated review)

chore(condo): DOMA-5776 updated callcenter submodule

* chore(condo): DOMA-5776 updated submodule

* chore(condo): DOMA-5776 regenerated migrations

* chore(condo): DOMA-5776 regenerated migrations

* fix(condo): DOMA-5776 fixed tickets export

* fix(condo): DOMA-5776 fixed tickets export

* fix(condo): DOMA-5776 fixed tests

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -720,7 +720,6 @@
   "pages.condo.ticket.TicketChanges.executor": "executor",
   "pages.condo.ticket.TicketChanges.executor.add": "added {field}. Now it is {to}",
   "pages.condo.ticket.TicketChanges.executor.remove": "removed {field}. It was {from}",
-  "pages.condo.ticket.TicketChanges.reviewValue.add": "reviewed ticket as {to}",
   "pages.condo.ticket.TicketChanges.statusReopenedCounter.change": "returned ticket to work",
   "pages.condo.ticket.TicketChanges.classifier": "classifier",
   "pages.condo.ticket.TicketChanges.address": "address",
@@ -731,6 +730,9 @@
   "pages.condo.ticket.TicketChanges.qualityControlComment": "commentary on the score",
   "pages.condo.ticket.TicketChanges.qualityControlComment.add": "commented on his assessment",
   "pages.condo.ticket.TicketChanges.qualityControlAdditionalOptions": "score clarification",
+  "pages.condo.ticket.TicketChanges.feedbackValue": "ticket score",
+  "pages.condo.ticket.TicketChanges.feedbackComment": "commentary on the score",
+  "pages.condo.ticket.TicketChanges.feedbackAdditionalOptions": "score clarification",
   "pages.condo.ticket.TicketChanges.ticketType": "ticket type",
   "pages.condo.ticket.TicketChanges.canReadByResident": "visibility of the ticket",
   "pages.condo.ticket.TicketChanges.canReadByResident.true": "displayed",
@@ -1319,14 +1321,15 @@
   "ticketsTable.Number": "№",
   "ticketsTable.ResidentName": "Resident Name",
   "ticket.newResidentComment": "New resident comment",
-  "ticket.reviewValue": "Resident review",
-  "ticket.reviewValue.good": "Good",
-  "ticket.reviewValue.bad": "Bad",
-  "ticket.reviewValue.noReview": "resident did not review",
-  "ticket.reviewComment.filled": "Noted",
-  "ticket.reviewComment.empty.badReview": "What exactly did not like - did not note",
-  "ticket.reviewComment.empty.goodReview": "What exactly did he like - did not note",
-  "ticket.reviewComment.withoutComment": "without comment",
+  "ticket.feedback": "Resident feedback",
+  "ticket.feedback.filter.label": "Resident feedback",
+  "ticket.feedback.bad": "Bad",
+  "ticket.feedback.options.lowQuality": "Low quality",
+  "ticket.feedback.options.slowly": "Very slowly",
+  "ticket.feedback.good": "Good",
+  "ticket.feedback.options.highQuality": "High quality",
+  "ticket.feedback.options.quickly": "Quickly",
+  "ticket.feedbackComment": "Comment",
   "ticket.qualityControl": "Quality control",
   "ticket.qualityControl.filter.label": "Score of the quality control service",
   "ticket.qualityControl.bad": "Bad",
@@ -1628,6 +1631,7 @@
   "api.ticket.updateResidentTicket.TICKET_NOT_FOUND": "Cannot find Ticket with id \"{ticketId}\" for current user",
   "api.ticket.TICKET_FOR_PHONE_DAY_LIMIT_REACHED": "Please try again tomorrow. You are not able to send more then {ticketLimit} tickets per day.",
   "api.ticket.SAME_TICKET_FOR_PHONE_DAY_LIMIT_REACHED": "You already sent this ticket.",
+  "api.ticket.FEEDBACK_VALUE_MUST_BE_SPECIFIED": "When specifying a comment or additional evaluation parameters, you must specify the evaluation itself",
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "No properties are found to export for current organization",
   "api.property.create.sameAddressError": "Property with the same address already exists in selected organization",
   "api.meter.exportMeterReadings.NOTHING_TO_EXPORT": "No meter readings to export for specified organization",
@@ -1768,8 +1772,10 @@
   "excelExport.headers.tickets.source": "Source",
   "excelExport.headers.tickets.deadline": "Deadline",
   "excelExport.headers.tickets.deferredUntil": "Deferred until",
-  "excelExport.headers.tickets.reviewValue": "Review score",
-  "excelExport.headers.tickets.reviewComment": "Review comment",
+  "excelExport.headers.tickets.feedbackValue": "EMPLOYEE: quality control",
+  "excelExport.headers.tickets.feedbackComment": "Commentary on quality control",
+  "excelExport.headers.tickets.feedbackAdditionalOptions": "Refinements for quality control score",
+  "excelExport.headers.tickets.feedbackUpdatedAt": "Date and time of quality control",
   "excelExport.headers.tickets.statusReopenedCounter": "Number of reopens",
   "excelExport.headers.tickets.qualityControlValue": "EMPLOYEE: quality control",
   "excelExport.headers.tickets.qualityControlComment": "Commentary on quality control",
