--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -720,7 +720,6 @@
   "pages.condo.ticket.TicketChanges.executor": "исполнителя",
   "pages.condo.ticket.TicketChanges.executor.add": "добавил {field} {to}",
   "pages.condo.ticket.TicketChanges.executor.remove": "удалил {field} {from}",
-  "pages.condo.ticket.TicketChanges.reviewValue.add": "добавил оценку {to}",
   "pages.condo.ticket.TicketChanges.statusReopenedCounter.change": "вернул заявку в работу",
   "pages.condo.ticket.TicketChanges.classifier": "классификатор",
   "pages.condo.ticket.TicketChanges.address": "адрес",
@@ -731,6 +730,9 @@
   "pages.condo.ticket.TicketChanges.qualityControlComment": "комментарий к оценке",
   "pages.condo.ticket.TicketChanges.qualityControlComment.add": "прокомментировал свою оценку: {to}",
   "pages.condo.ticket.TicketChanges.qualityControlAdditionalOptions": "уточнение по оценке",
+  "pages.condo.ticket.TicketChanges.feedbackValue": "оценку",
+  "pages.condo.ticket.TicketChanges.feedbackComment": "комментарий к оценке",
+  "pages.condo.ticket.TicketChanges.feedbackAdditionalOptions": "уточнение по оценке",
   "pages.condo.ticket.TicketChanges.ticketType": "тип заявки",
   "pages.condo.ticket.TicketChanges.canReadByResident": "видимость заявки",
   "pages.condo.ticket.TicketChanges.canReadByResident.true": "отображается",
@@ -1319,14 +1321,15 @@
   "ticketsTable.Number": "№",
   "ticketsTable.ResidentName": "Фио Жителя",
   "ticket.newResidentComment": "Новый комментарий жителя",
-  "ticket.reviewValue": "Оценка жителя",
-  "ticket.reviewValue.good": "Хорошо",
-  "ticket.reviewValue.bad": "Плохо",
-  "ticket.reviewValue.noReview": "житель не оценил",
-  "ticket.reviewComment.filled": "Отметил",
-  "ticket.reviewComment.empty.badReview": "Что именно не понравилось – не отметил",
-  "ticket.reviewComment.empty.goodReview": "Что именно понравилось – не отметил",
-  "ticket.reviewComment.withoutComment": "без уточнения",
+  "ticket.feedback": "Оценка жителя",
+  "ticket.feedback.filter.label": "Контроль качества",
+  "ticket.feedback.bad": "Плохо",
+  "ticket.feedback.options.lowQuality": "Сделали некачественно",
+  "ticket.feedback.options.slowly": "Долго делали",
+  "ticket.feedback.good": "Хорошо",
+  "ticket.feedback.options.highQuality": "Сделали на совесть",
+  "ticket.feedback.options.quickly": "Быстро сделали",
+  "ticket.feedbackComment": "Комментарий",
   "ticket.qualityControl": "Контроль качества",
   "ticket.qualityControl.filter.label": "Оценка службы контроля качества",
   "ticket.qualityControl.bad": "Плохо",
@@ -1628,6 +1631,7 @@
   "api.ticket.updateResidentTicket.TICKET_NOT_FOUND": "Не найдена заявка с id \"{ticketId}\" для текущего пользователя",
   "api.ticket.TICKET_FOR_PHONE_DAY_LIMIT_REACHED": "Попробуйте завтра. Сегодня управляющая компания уже получила {ticketLimit} заявок от вас. На главной странице раздела «Заявки» можно уточнить статус по каждой из них.",
   "api.ticket.SAME_TICKET_FOR_PHONE_DAY_LIMIT_REACHED": "Вы уже отправляли эту заявку. Управляющая компания уже занимается вашей проблемой. Уточнить статус можно на главной странице раздела «Заявки».",
+  "api.ticket.FEEDBACK_VALUE_MUST_BE_SPECIFIED": "При указании комментария или дополнительных параметров оценки нужно указать саму оценку",
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "Нет домов для экспорта, которые связаны с данной организацией",
   "api.property.create.sameAddressError": "Дом с таким адресом уже создан в выбранной организации",
   "api.meter.exportMeterReadings.NOTHING_TO_EXPORT": "Нет показаний ИПУ для экспорта, которые связаны с указанной организацией",
@@ -1768,8 +1772,10 @@
   "excelExport.headers.tickets.source": "Источник",
   "excelExport.headers.tickets.deadline": "Выполнить до",
   "excelExport.headers.tickets.deferredUntil": "Отложена до",
-  "excelExport.headers.tickets.reviewValue": "Оценка заявки",
-  "excelExport.headers.tickets.reviewComment": "Комментарий к оценке",
+  "excelExport.headers.tickets.feedbackValue": "ЖИТЕЛЬ: оценка общая",
+  "excelExport.headers.tickets.feedbackComment": "Комментарий к оценке от жителя",
+  "excelExport.headers.tickets.feedbackAdditionalOptions": "Уточнения по оценке жителя",
+  "excelExport.headers.tickets.feedbackUpdatedAt": "Дата и время оценки жителя",
   "excelExport.headers.tickets.statusReopenedCounter": "Возвратов заявки",
   "excelExport.headers.tickets.qualityControlValue": "СОТРУДНИК: контроль качества",
   "excelExport.headers.tickets.qualityControlComment": "Комментарий к контролю качества",
